feat: Implement DB Auth, Staff Signup, OPD Fixes & Updates
1. Auth Service: Implemented database-backed authentication with BCrypt hashing and user roles. Added Signup endpoint. 2. Frontend: Added Signup page, updated Login, added Staff management in Nursing Roster. 3. OPD Service: Removed Lombok from entities/controllers for Java 25 compatibility. Fixed Appointment creation issue. 4. Documentation: Updated README.md with new features and removed sensitive details.